--- a/css/output.css
+++ b/css/output.css
@@ -1,13 +1,18 @@
+body {
+  margin: 0;
+}
+
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 90px;
-  width: 100vw;
+  height: 70px;
+  padding: 15px 10px;
 }
 
 .nav-left {
   display: flex;
+  margin-left: 54.2px;
 }
 .nav-left img {
   height: 70px;
@@ -16,12 +21,52 @@ nav {
   padding-top: 10px;
   padding-left: 15px;
 }
+.nav-left a {
+  color: black;
+  text-decoration: none;
+}
+
+.nav-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 54.2px;
+}
+.nav-right p {
+  margin: 0;
+  margin-left: 10px;
+  margin-right: 20px;
+}
+.nav-right button {
+  height: 30px;
+  width: 117px;
+  border: 0;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: red;
+}
+.nav-right i {
+  color: red;
+}
 
 .options {
   display: flex;
+  justify-content: center;
   background-color: #34465f;
   height: 36px;
   width: 100vw;
+}
+.options a {
+  text-decoration: none;
+  color: white;
+}
+.options p {
+  padding-top: 7px;
+  margin: 0;
+  height: 36px;
+  width: 200px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=output.css.map */
