--- a/scss/input.scss
+++ b/scss/input.scss
@@ -1,14 +1,19 @@
+body {
+  margin: 0;
+}
+
+//nav styles
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 90px;
-  width: 100vw;
-
+  height: 70px;
+  padding: 15px 10px;
 }
 
 .nav-left {
   display: flex;
+  margin-left: 54.2px;
 
   img {
     height: 70px;
@@ -18,13 +23,58 @@ nav {
     padding-top: 10px;
     padding-left: 15px;
   }
-
+  a {
+    color: black;
+    text-decoration: none;
+  }
 }
 
+
+.nav-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 54.2px;
+  // padding-top: 30px;
+  p {
+    margin: 0;
+    margin-left: 10px;
+    margin-right: 20px;
+  }
+
+  button {
+    height: 30px;
+    width: 117px;
+    border: 0;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    background-color: red;
+  }
+
+  i {
+    color: red;
+  }
+}
 
 .options {
   display: flex;
+  justify-content: center;
   background-color: #34465f;
   height: 36px;
   width: 100vw;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
+  p {
+    padding-top: 7px;
+    margin: 0;
+    height: 36px;
+    width: 200px;
+    text-align: center;
+  }
 }
+//end nav styles
