--- a/scss/input.scss
+++ b/scss/input.scss
@@ -7,8 +7,12 @@ body {
 
 //nav styles
 nav {
-  display: flex;
   position: fixed;
+  background-color: white;
+  width: 100vw;
+  margin-top: -136px;
+
+  display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 70px;
@@ -37,7 +41,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 50px;
+  // margin-left: 50px;
   p {
     font-family: $contentFont;
     font-weight: bold;
@@ -63,6 +67,9 @@ nav {
 }
 
 .options {
+  position: fixed;
+  margin-top: -36px;
+
   display: flex;
   justify-content: center;
   background-color: #34465f;
@@ -92,9 +99,10 @@ nav {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 82vh;
+  height: 40vw;
+  margin-top: 136px;
   background-image: url("../img/background.jpg");
-  background-size: 100vw 82vh;
+  background-size: 100vw 45vw;
 }
 
 .floater {
@@ -103,7 +111,7 @@ nav {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 82vh;
+  height: 40vw;
   background-color: rgba(52, 70, 95, .5);
   color: white;
 
@@ -131,8 +139,8 @@ nav {
 }
 //end hero styles
 
-//section-container styles
-.section-container {
+//mission styles
+.mission {
   width: 100vw;
   height: 130px;
   padding-top: 35px;
@@ -151,7 +159,7 @@ nav {
     font-family: $contentFont;
   }
 }
-//end section-container styles
+//end mission styles
 
 //tiles styles
 .tiles {
@@ -163,5 +171,128 @@ nav {
   img {
     height: 200px;
     width: 25vw;
+  }
+}
+//end tile styles
+
+//more info styles
+.more-info{
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+
+  //more-info-head
+  .more-info-head {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      height: 30vh;
+      width: auto;
+    }
+
+    h2 {
+      font-size: 25pt;
+      font-weight: lighter;
+      font-family: $headingFont;
+    }
+  }
+
+
+
+  //more-info-info
+  .more-info-info {
+    display: flex;
+    flex-direction: row;
+    padding-left: 150px;
+    padding-right: 150px;
+
+
+    .info-panel {
+      display: flex;
+      flex-direction: column;
+      font-family: $contentFont;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
+
+
+}
+
+
+//media querys
+@media screen and (max-width: 1000px) and (min-width: 600px) {
+
+  .options {
+    display: none;
+  }
+
+  nav {
+    height: 35px;
+
+    .nav-left {
+      img {
+        height: 35px;
+      }
+
+      p {
+        margin-top: 7px;
+        padding-top: 0;
+      }
+    }
+  }
+
+  .tiles {
+    img {
+      height: 120px;
+      width: 50vw;
+    }
+  }
+
+  .more-info {
+    .more-info-info {
+      flex-direction: column;
+    }
+  }
+
+
+}
+
+@media screen and (max-width: 600px) {
+  .options {
+    display: none;
+  }
+
+  nav {
+    height: 35px;
+
+    .nav-left {
+      img {
+        height: 35px;
+      }
+
+      p {
+        margin-top: 7px;
+        padding-top: 0;
+      }
+    }
+  }
+
+  .tiles {
+    img {
+      height: 120px;
+      width: 50vw;
+    }
+  }
+
+  .more-info {
+    .more-info-info {
+      flex-direction: column;
+    }
   }
 }
