--- a/scss/input.scss
+++ b/scss/input.scss
@@ -256,6 +256,7 @@ nav {
 
   .more-info {
     .more-info-info {
+      padding: 0;
       flex-direction: column;
     }
   }
@@ -292,6 +293,7 @@ nav {
 
   .more-info {
     .more-info-info {
+      padding: 0;
       flex-direction: column;
     }
   }
